# UniversalTranslator

./: README.md  config.json  plan.md
.github/workflows/: ci.yml
python/: pyproject.toml
python/src/: __init__.py  config.py  hotkey.py  main.py  overlay.py  paste.py  tray.py
python/src/engines/: canary_engine.py  factory.py  qwen3_engine.py  voxtral_engine.py  whisper_engine.py
python/src/translation/: factory.py  madlad_engine.py  nllb_engine.py  seamless_engine.py
