[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "talk"
version = "0.1.0"
description = "Voice-to-text hotkey app with real-time translation"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "crutkas"},
]
dependencies = [
    "PyQt6>=6.6",
    "sounddevice>=0.4",
    "pynput>=1.7",
    "numpy>=1.26",
    "pyperclip>=1.8",
    "httpx>=0.27",
]

[project.optional-dependencies]
translation = [
    "transformers>=4.40",
    "ctranslate2>=4.0",
    "sentencepiece>=0.2",
]
all-stt = [
    "qwen-asr>=0.1",
    "nemo_toolkit>=1.23",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-qt>=4.4",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
talk = "src.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
